--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body {
     background-color: greenyellow;
 }
+
+.keret {
+    width: 350px;
+    background-color: rgb(0, 109, 37);
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 15px;
+}
